# async_webserver_rust

./: Cargo.toml  Dockerfile  README.md
migrations/: 20250312090449_create_tables.sql
src/: main.rs
src/db/: sqlite.rs
src/models/: index.rs  symbol.rs
src/routes/: detail.rs  mod.rs  root.rs  static_files.rs
src/server/: errors.rs  http.rs  http_server.rs  methods.rs  mod.rs  request.rs  response.rs  route.rs  router.rs  server.rs
src/services/: data_sync.rs  database.rs  mod.rs  stock_client.rs
src/utils/: error.rs
static/css/: styles.css
templates/: detail.html  error.html  index.html
